Chevron Flex Align Bug Fix

--- a/src/assets/css/blog.css
+++ b/src/assets/css/blog.css
@@ -492,6 +492,7 @@
   .chevron-section {
     display: flex;
     padding-left: 3rem;
+    align-items: center;
   }
 
   .chevron-section p {
